--- a/SequenceLogger/SequenceLogger/SequenceLogger.csproj
+++ b/SequenceLogger/SequenceLogger/SequenceLogger.csproj
@@ -39,16 +39,20 @@
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Attributes\StorageFileAttribute.cs" />
     <Compile Include="Events\LoadingManagerEvents.cs" />
     <Compile Include="Events\PlatformServiceEvents.cs" />
     <Compile Include="Events\SceneManagerEvents.cs" />
     <Compile Include="Events\PluginManagerEvents.cs" />
     <Compile Include="Events\LocaleManagerEvents.cs" />
+    <Compile Include="Options.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="ThreadingExtension.cs" />
     <Compile Include="LoadingExtension.cs" />
     <Compile Include="Util\Log.cs" />
     <Compile Include="UserMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\StorageManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="PostBuild.props" Condition="Exists('PostBuild.props')" />
